@@ -1,5 +1,10 @@
 2007-03-14  Miloslav Trmac  <mitr@redhat.com>
 
+	* pam-panel-icon.c (main, refresh_tray_icon): Load the pixbuf when
+	initializing the status icon, not when starting the program.
+	(refresh_tray_icon): Only initialize the status icon when it needs to
+	be visible, saving 312 kB of DRS as reported by ps(1).
+
 	* userpasswd.c: Don't #include "userdialogs.h",  use <libintl.h>
 	instead.
 	(main): Use LOCALEDIR.  Remove unnecessary gtk_set_locale ().
